--- a/practice.html
+++ b/practice.html
@@ -399,7 +399,7 @@
         type:"pie",
         data:{
           labels:["使用中","空席"],
-          datasets:[{data:[0,0], backgroundColor:["blue","red"]}]
+          datasets:[{data:[0,0], backgroundColor:["red","blue"]}]
         }
       });
 
